# king_maker

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
config/: config.yaml
deploy/launchd/: com.swing.daily.plist
src/swing/: __init__.py  cli.py  config.py
src/swing/adapters/: corporate_actions.py  http.py  nse.py
src/swing/backtest/: costs.py  engine.py  metrics.py
src/swing/decision/: sizing.py
src/swing/features/: engine.py  technical.py
src/swing/labeling/: triple_barrier.py
src/swing/pipeline/: adjust.py  ingest.py  store.py  validate.py
src/swing/report/: daily.py
src/swing/screener/: rules.py
tests/: conftest.py  synth.py  test_adapters.py  test_adjust.py  test_backtest.py  test_config.py  test_corporate_actions.py  test_costs_sizing.py  test_ingest.py  test_no_lookahead.py  test_report.py  test_store_pit.py  test_triple_barrier.py
tests/fixtures/: ind_close_all_sample.csv  legacy_cm_sample.csv  udiff_cm_sample.csv  udiff_fo_sample.csv
